# amplifier-bundle-dot-graph

./: .gitignore  .gitmodules  CONTEXT-TRANSFER.md  README.md  bundle.md  pyproject.toml
.discovery/: discovery.dot  last-run.json  manifest.json  overview.dot  scan_result.json  topics.json
agents/: diagram-reviewer.md  discovery-architecture-writer.md  discovery-combiner.md  discovery-integration-mapper.md  discovery-level-synthesizer.md  discovery-orchestrator.md  discovery-overview-synthesizer.md  discovery-prescan.md  discovery-subsystem-synthesizer.md  discovery-synthesizer.md  dot-author.md
behaviors/: dot-core.yaml  dot-discovery.yaml  dot-graph.yaml
context/: discovery-awareness.md  discovery-combiner-instructions.md  discovery-level-synthesizer-instructions.md  discovery-overview-synthesizer-instructions.md  discovery-prescan-instructions.md  discovery-subsystem-synthesizer-instructions.md  dot-awareness.md  dot-instructions.md
demos/: announcement-deck-complete.html  announcement-deck-final.html  announcement-deck-standalone.html  announcement-deck.html
docs/: DOT-PATTERNS.md  DOT-QUALITY-STANDARDS.md  DOT-SYNTAX-REFERENCE.md  GRAPH-ANALYSIS-GUIDE.md  GRAPHVIZ-SETUP.md  INTEGRATION-TEST-RESULTS.md
modules/tool-dot-graph/: pyproject.toml
modules/tool-dot-graph/amplifier_module_tool_dot_graph/: __init__.py  analyze.py  assemble.py  prescan.py  setup_helper.py  validate.py
modules/tool-dot-graph/tests/: test_analyze.py  test_assemble.py  test_mount.py  test_mount_stub.py  test_prescan.py  test_setup_helper.py  test_tool_integration.py  test_validate.py
recipes/: discover.yaml  discovery-combine.yaml  discovery-investigate-topic.yaml  (+7 more)
(+191 files in other folders)
