[project]
name = "amplifier-bundle-dot-graph"
version = "0.1.0"
description = "DOT/Graphviz infrastructure — knowledge, validation, rendering, and graph intelligence for the Amplifier ecosystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Microsoft", email = "amplifier@microsoft.com" }
]

[tool.setuptools]
packages = []  # Bundle repo, not a Python library

[tool.pytest.ini_options]
# Scope default collection to tests/ only.
# Module tests under modules/tool-dot-graph/tests/ require PYTHONPATH to be set
# and must be run explicitly from within that directory:
#   cd modules/tool-dot-graph && python -m pytest
# The root test suite (tests/) already covers module behaviour via subprocess
# in tests/test_final_verification.py.
testpaths = ["tests"]
