[project]
name = "amplifier-module-tool-dot-graph"
version = "0.1.0"
description = "DOT graph generation and visualization tool module for Amplifier"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydot>=3.0",
    "networkx>=3.0",
]

[project.entry-points."amplifier.modules"]
tool-dot-graph = "amplifier_module_tool_dot_graph:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_dot_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
